Fixes bug: navbar behind other elements.

--- a/src/styles/_header.scss
+++ b/src/styles/_header.scss
@@ -7,13 +7,13 @@ header {
   background-size: cover;
   background-repeat: no-repeat;
   position: relative;
-  z-index: 0;
+  z-index: 999;
 
   nav {
     background-color: transparent;
     position: fixed;
     top: 0;
-    z-index: 9999 !important;
+    z-index: 10;
     width: 100%;
     height: 80px;
     padding-top: 10px;
@@ -108,6 +108,8 @@ header {
       overflow: hidden;
       text-align: center;
       background: transparent;
+      position: relative;
+      z-index: 9999;
 
       li {
         a {
@@ -145,6 +147,7 @@ header {
   background: $color-cream;
   color: #000;
   box-shadow: rgba(2, 12, 27, 0.7) 0px 10px 30px -10px;
+  z-index: 11;
 
   .logo,
   a {
@@ -207,6 +210,7 @@ header .header-info {
   }
 
   header .header-info {
+
     h1 {
       font-size: 3.5em;
     }
