--- a/src/styles/_portfolio.scss
+++ b/src/styles/_portfolio.scss
@@ -20,6 +20,8 @@
       display: grid;
       grid-template-columns: 1fr;
       grid-gap: 30px;
+      position: relative;
+      z-index: 0;
 
       .portfolio-item {
         height: 350px;
